--- a/EggTimer/Base.lproj/Main.storyboard
+++ b/EggTimer/Base.lproj/Main.storyboard
@@ -121,6 +121,18 @@
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nJN-th-c5K" userLabel="Timer View">
                                         <rect key="frame" x="0.0" y="571.5" width="374" height="246.5"/>
+                                        <subviews>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7m9-cq-1to">
+                                                <rect key="frame" x="30" y="121" width="314" height="4"/>
+                                                <color key="progressTintColor" red="1" green="0.62352941179999999" blue="0.16078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="trackTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </progressView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="7m9-cq-1to" secondAttribute="trailing" constant="30" id="FVT-rv-IK4"/>
+                                            <constraint firstItem="7m9-cq-1to" firstAttribute="leading" secondItem="nJN-th-c5K" secondAttribute="leading" constant="30" id="USz-cN-P0t"/>
+                                            <constraint firstItem="7m9-cq-1to" firstAttribute="centerY" secondItem="nJN-th-c5K" secondAttribute="centerY" id="wEZ-br-ai0"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
@@ -135,6 +147,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="progressView" destination="7m9-cq-1to" id="yid-DI-Ggx"/>
                         <outlet property="titleLabel" destination="XLm-5r-pSP" id="AoC-Pf-6KX"/>
                     </connections>
                 </viewController>
